Fixed overflow in modals on porfolio page

--- a/css/main.css
+++ b/css/main.css
@@ -183,8 +183,8 @@ body{
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    width: 80%; /* Full width */
-    height: 70%; /* Full height */
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -196,7 +196,7 @@ body{
     background-color: #fefefe;
     padding: 20px;
     border: 1px solid #888;
-    max-height: calc(100% - 80px);
+    max-height: calc(100% - 40px);
     max-width: calc(80% - 100px);
     position: fixed;
     top: 50%;
@@ -336,7 +336,7 @@ body{
   box-sizing: content-box;
   cursor: pointer;
   padding: 10px 20px;
-  border: 1px solid #018dc4;
+  border: 1px solid gray;
   -webkit-border-radius: 22px;
   border-radius: 22px;
   font: normal 16px/normal "Times New Roman", Times, serif;
